--- a/css/styles.css
+++ b/css/styles.css
@@ -49,13 +49,11 @@ ul {
 .container__1000px {
     max-width: 1000px;
     margin: 0 auto;
-    width: 100%;
     padding: 0 1rem;
 }
 .container__1200px {
     max-width: 1200px;
     margin: 0 auto;
-    width: 100%;
     padding: 0 1rem;
 }
 /* Logo */
@@ -144,8 +142,6 @@ ul {
     color: var(--color-white-1);
 }
 .navigator__item--cta::after { display: none; }
-
-
 
 /* Responsive */
 .checkbtn {
@@ -270,24 +266,6 @@ ul {
         color: var(--color-white-1);
     }
 }
-/*** Parallax ***/
-#parallax__section--01 {
-    width: 100%;
-    height: 250px;
-    background: var(--color-white-1) url(../img/bbking.webp) no-repeat top fixed;
-    background-size: cover;
-}
-#parallax__section--02 {
-    padding: 1.5rem;
-    background: var(--color-black-1) url(../img/guitar.webp) no-repeat top fixed;
-    background-size: cover;
-}
-@media screen and (min-width: 768px) {
-    #parallax__section--01 { height: 450px; }    
-}
-@media screen and (min-width: 900px) {
-    #parallax__section--01 { height: 80vh; }
-}
 
 /* Section Banner for heading titles */
 .banner {
@@ -345,8 +323,6 @@ ul {
     font-size: 2rem;
     list-style-type: none;
 }
-
-
 .footer__text {
     margin-top: 1rem;
     font-size: 1.4rem;
@@ -355,7 +331,6 @@ ul {
 .footer__separator {
     padding: 1rem;
 }
-
 .footer__disclaim {
     background-color: #050505;
     text-align: center;    
@@ -397,64 +372,64 @@ ul {
     color: var(--color-white-2);
 }
 @media screen and (min-width: 768px) {
-    .hero__text--title {
-        font-size: 3.5rem;
-    }
-    .hero__text--subtitle {
-        font-size: 2.2rem;
+    .hero__text--title { font-size: 3.5rem; }
+    .hero__text--subtitle { font-size: 2.2rem; }
+}
+@media screen and (min-width: 900px) {
+    .hero__text--title { font-size: 5rem; }
+    .hero__text--subtitle { font-size: 2.4rem; }
+}
+
+/* Parallax & Quote*/
+#parallax__section--01 {
+    height: 350px;
+    max-width: 768px;
+    background: var(--color-white-1) url(../img/bbking.webp) no-repeat top fixed;
+    background-size: cover;
+}
+@media screen and (min-width: 768px) {
+    #parallax__section--01 { 
+        height: 450px;
+        max-width: 900px;
     }
 }
 @media screen and (min-width: 900px) {
-    .hero__text--title {
-        font-size: 5rem;
-    }
-    .hero__text--subtitle {
-        font-size: 2.4rem;
+    #parallax__section--01 { 
+        height: 80vh;
+        max-width: 100%;
     }
 }
-
-
 .quote {
     color: var(--color-black-1);
-    height: 150px;
+    min-height: 150px;
     padding: 2rem;
-    width: 90%;
     margin: 0 auto;
     background-color: rgba(255, 255, 255, .8);
     backdrop-filter: blur(10px);
+    text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     border-radius: .5rem;
 }
-@media screen and (min-width: 768px) {
-    .quote {
-        width: 100%;
-    }
-}
 .quote__text {
-    font-size: 2rem;
-    font-style: italic;
+    font: italic 400 2rem var(--font-1);
 }
 .quote__author {
-    font-weight: 800;
-    font-size: 1.6rem;
+    font: normal 800 1.6rem var(--font-2);
 }
-
-
 .swiper {
     max-width: 1000px;
     margin: 0 auto;
     width: 100%;
-    padding: 1.5rem;
+    padding: 4rem 1.5rem;
 }
 .swiper-slide {
     border-radius: .5rem;
     width: 100%;
     min-height: 350px;
-    background-color: rgba(255, 255, 255, .8);
-    backdrop-filter: blur(10px);
+    background-color: var(--color-white-1);
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -476,11 +451,91 @@ ul {
     list-style-type: circle;
 }
 /* Pagination Bullet  */
-.swiper-pagination-bullet-active { background-color: var(--color-primary); }
+.swiper-pagination-bullet {
+    background-color: var(--color-white-1);
+}
 
 @media screen and (min-width: 768px) {
     .slide__title { font-size: 4rem; }
     .swiper-slide:hover { transform: scale(105%); }
+}
+
+/* Bootstrap Modal  */
+.modal-dialog {
+    max-width: 1000px;
+    padding: 1.5rem;
+}
+.modal-content {
+    overflow: hidden;
+    border-radius: .5rem;
+    border: none;
+    height: 70vh;
+}
+.modal-body {
+    border: none;
+    position: relative;
+    display: flex;
+}
+.btn-close {
+    position: absolute;
+    top: 0;
+    right: 0;
+    padding: 1rem;
+    transition: all .2s ease-in-out;
+}
+.modal__info {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+}
+.modal__title {
+    font: normal 600 3rem var(--font-2);
+}
+.modal__text {
+    margin: 1.5rem 0;
+    text-align: start;
+}
+.modal__price {
+    font: normal 600 3rem var(--font-1);
+    display: flex;
+}
+.modal__price--sup {
+    font: normal 400 1.3rem var(--font-1);
+    top:0;
+}
+.modal-body img {
+    display: none;
+}
+@media screen and (min-width: 768px) {
+    .modal-body { 
+        padding: 0; 
+    }
+    .modal-body img {
+        display: block;
+        max-width: 350px;
+        object-fit: cover;
+        height: 90vh;
+    }
+    .modal-content {
+        height: 90vh;
+    }
+    .modal__info {
+        padding: 0 2rem;
+    }
+    .modal__title {
+        font-size: 5rem;
+    }
+    .modal__text {
+        margin: 1rem 0;
+    }
+    .modal__price {
+        font-size: 5rem;
+    }
+    .modal__price--sup {
+        font-size: 1.6rem;
+    }
 }
 
 /*****      Contact Form      *****/
@@ -540,9 +595,6 @@ ul {
     top: 10px;
     width: 100%;
     z-index: -1;
-} 
-.input__text:focus {
-    border: 2px solid var(--color-black-2);
 }
 .input__text--textarea {
     resize: none;
@@ -576,10 +628,7 @@ ul {
 .blog--grid {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-areas:
-        'main'
-        'aside'
-    ;
+    grid-template-areas: 'main' 'aside';
 }
 
 /* Main Section from blog */
