--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;900&family=Poppins:wght@200;300;400;600;700;800;900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700;900&family=Poppins:wght@200;300;400;600;700;800;900&display=swap");
 
 :root {
-    --font-1: 'Poppins', sans-serif;
-    --font-2: 'Playfair Display', serif;
-    
+    --font-1: "Poppins", sans-serif;
+    --font-2: "Playfair Display", serif;
+
     --color-primary: #5a189a;
     --color-secondary: #3c096c;
 
@@ -13,7 +13,7 @@
     --color-black-1: #111;
     --color-black-2: #222;
 
-    --transition: all .2 ease-in-out;
+    --transition: all 0.2 ease-in-out;
 }
 
 /****   Globals    ****/
@@ -22,15 +22,15 @@
     padding: 0;
     box-sizing: border-box;
 }
-html { 
-    font-size: 62.5%; 
+html {
+    font-size: 62.5%;
 }
 body {
     font-size: 1.6rem;
     font-family: var(--font-1);
 }
-main { 
-    background-color: var(--color-white-1); 
+main {
+    background-color: var(--color-white-1);
 }
 a {
     color: inherit;
@@ -64,17 +64,17 @@ ul {
 }
 /* Button */
 .button {
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     width: 100%;
     background-color: inherit;
     min-width: 150px;
     height: 5rem;
-    padding: .5rem;
+    padding: 0.5rem;
     border: none;
     cursor: pointer;
-    transition: all .2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
-.button--primary{
+.button--primary {
     background-color: var(--color-primary);
     color: var(--color-white-1);
 }
@@ -83,17 +83,21 @@ ul {
 }
 
 /*** Navbar ***/
-#check { display: none; }
+#check {
+    display: none;
+}
 #navbar {
     position: fixed;
     width: 100%;
     z-index: 10;
-    transition: all .2s ease-in-out;
+    transition: all 0.2s ease-in-out;
     padding: 0 1rem;
     margin: 0 auto;
 }
 /* Add background-color on scroll */
-.active-nav { background-color: var(--color-primary); } 
+.active-nav {
+    background-color: var(--color-primary);
+}
 .navigator {
     height: 70px;
     color: var(--color-white-1);
@@ -110,12 +114,12 @@ ul {
     flex-direction: row;
 }
 .navigator__item {
-    transition: color ease-in-out .3s;
+    transition: color ease-in-out 0.3s;
     position: relative;
     padding: 1rem;
 }
 .navigator__item::after {
-    content: '';
+    content: "";
     position: absolute;
     width: 100%;
     transform: scaleX(0);
@@ -124,7 +128,7 @@ ul {
     left: 0;
     background-color: var(--color-white-1);
     transform-origin: bottom right;
-    transition: transform .2s ease-in-out;
+    transition: transform 0.2s ease-in-out;
 }
 .navigator__item:hover::after {
     transform: scaleX(1);
@@ -134,25 +138,27 @@ ul {
 .navigator__item--cta {
     background-color: var(--color-white-1);
     color: var(--color-black-1);
-    transition: all ease-in-out .3s;
-    border-radius: .5rem;
+    transition: all ease-in-out 0.3s;
+    border-radius: 0.5rem;
 }
 .navigator__item--cta:hover {
     background-color: var(--color-secondary);
     color: var(--color-white-1);
 }
-.navigator__item--cta::after { display: none; }
+.navigator__item--cta::after {
+    display: none;
+}
 
 /* Responsive */
 .checkbtn {
     font-size: 30px;
     float: right;
-    line-height: 80px;    
+    line-height: 80px;
     cursor: pointer;
     display: none;
 }
-@media (max-width: 768px){
-    .checkbtn{
+@media (max-width: 768px) {
+    .checkbtn {
         display: block;
     }
     .navigator {
@@ -167,26 +173,26 @@ ul {
         top: 70px;
         left: -100%;
         text-align: center;
-        transition: all .5s ease-in-out;
+        transition: all 0.5s ease-in-out;
         flex-direction: column;
     }
-    .navigator__item{
-      display: block;
-      margin: 1rem 0;
-      font-size: 20px;
-      color: var(--color-white-1);
+    .navigator__item {
+        display: block;
+        margin: 1rem 0;
+        font-size: 20px;
+        color: var(--color-white-1);
     }
     .navigator__item::after {
-        content: '';
+        content: "";
         position: absolute;
         display: none;
     }
     .navigator__item--cta {
         color: var(--color-black-1);
     }
-    
-    #check:checked ~ ul{
-      left: 0;
+
+    #check:checked ~ ul {
+        left: 0;
     }
 }
 
@@ -214,12 +220,12 @@ ul {
     margin: 3rem 0 1rem 0;
 }
 .item {
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     text-align: center;
     padding: 1rem;
     min-height: 150px;
     width: 100%;
-    transition: all .2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 .item__top {
     width: 100%;
@@ -237,7 +243,7 @@ ul {
     justify-content: center;
     align-items: center;
     margin: 0 auto;
-    transition: all .2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 .item__top--text {
     font-size: 1.8rem;
@@ -255,8 +261,12 @@ ul {
     font-style: italic;
 }
 @media screen and (min-width: 768px) {
-    .section__title { font-size: 5rem; }
-    .section__grid { grid-template-columns: repeat(3, 1fr); }
+    .section__title {
+        font-size: 5rem;
+    }
+    .section__grid {
+        grid-template-columns: repeat(3, 1fr);
+    }
     .item:hover {
         transform: scale(105%);
         background-color: var(--color-white-2);
@@ -284,11 +294,17 @@ ul {
     font: normal 600 3rem var(--font-2);
 }
 @media screen and (min-width: 768px) {
-    .banner { min-height: 300px; }
+    .banner {
+        min-height: 300px;
+    }
 }
 @media (min-width: 992px) {
-    .banner { min-height: 350px; }
-    .banner__title { font-size: 5rem;}
+    .banner {
+        min-height: 350px;
+    }
+    .banner__title {
+        font-size: 5rem;
+    }
 }
 .score {
     width: 100%;
@@ -339,8 +355,8 @@ ul {
 }
 .footer__disclaim {
     background-color: #050505;
-    text-align: center;    
-    padding: .5rem;
+    text-align: center;
+    padding: 0.5rem;
     font-size: 1.2rem;
     color: #ccc;
 }
@@ -378,12 +394,20 @@ ul {
     color: var(--color-white-2);
 }
 @media screen and (min-width: 768px) {
-    .hero__text--title { font-size: 3.5rem; }
-    .hero__text--subtitle { font-size: 2.2rem; }
+    .hero__text--title {
+        font-size: 3.5rem;
+    }
+    .hero__text--subtitle {
+        font-size: 2.2rem;
+    }
 }
 @media screen and (min-width: 992px) {
-    .hero__text--title { font-size: 5rem; }
-    .hero__text--subtitle { font-size: 2.4rem; }
+    .hero__text--title {
+        font-size: 5rem;
+    }
+    .hero__text--subtitle {
+        font-size: 2.4rem;
+    }
 }
 
 /* Parallax & Quote*/
@@ -394,13 +418,13 @@ ul {
     background-size: cover;
 }
 @media screen and (min-width: 768px) {
-    #parallax__section--01 { 
+    #parallax__section--01 {
         height: 450px;
         max-width: 900px;
     }
 }
 @media screen and (min-width: 992px) {
-    #parallax__section--01 { 
+    #parallax__section--01 {
         height: 80vh;
         max-width: 100%;
     }
@@ -410,14 +434,14 @@ ul {
     min-height: 150px;
     padding: 2rem;
     margin: 0 auto;
-    background-color: rgba(255, 255, 255, .8);
+    background-color: rgba(255, 255, 255, 0.8);
     backdrop-filter: blur(10px);
     text-align: center;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
 }
 .quote__text {
     font: italic 400 2rem var(--font-1);
@@ -432,7 +456,7 @@ ul {
     padding: 4rem 1.5rem;
 }
 .swiper-slide {
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     width: 100%;
     min-height: 350px;
     background-color: var(--color-white-1);
@@ -440,7 +464,7 @@ ul {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    transition: .2s all ease-in-out; 
+    transition: 0.2s all ease-in-out;
 }
 .slide__top {
     text-align: center;
@@ -462,8 +486,12 @@ ul {
 }
 
 @media screen and (min-width: 768px) {
-    .slide__title { font-size: 4rem; }
-    .swiper-slide:hover { transform: scale(105%); }
+    .slide__title {
+        font-size: 4rem;
+    }
+    .swiper-slide:hover {
+        transform: scale(105%);
+    }
 }
 
 /* Bootstrap Modal  */
@@ -473,7 +501,7 @@ ul {
 }
 .modal-content {
     overflow: hidden;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
     border: none;
     height: 70vh;
 }
@@ -487,7 +515,7 @@ ul {
     top: 0;
     right: 0;
     padding: 1rem;
-    transition: all .2s ease-in-out;
+    transition: all 0.2s ease-in-out;
 }
 .modal__info {
     display: flex;
@@ -509,14 +537,14 @@ ul {
 }
 .modal__price--sup {
     font: normal 400 1.3rem var(--font-1);
-    top:0;
+    top: 0;
 }
 .modal-body img {
     display: none;
 }
 @media screen and (min-width: 768px) {
-    .modal-body { 
-        padding: 0; 
+    .modal-body {
+        padding: 0;
     }
     .modal-body img {
         display: block;
@@ -551,17 +579,16 @@ ul {
     display: grid;
     gap: 1.5rem;
     grid-template-columns: 1fr;
-    grid-template-areas: 'name' 'surname' 'email' 'tel' 'message' 'button__form';
+    grid-template-areas: "name" "surname" "email" "tel" "message" "button__form";
 }
 @media screen and (min-width: 768px) {
     .form {
         grid-template-columns: 1fr 1fr;
         grid-template-areas:
-            'name surname'
-            'email tel '
-            'message message'
-            'button__form button__form'
-        ;
+            "name surname"
+            "email tel "
+            "message message"
+            "button__form button__form";
     }
 }
 .input {
@@ -572,7 +599,7 @@ ul {
     position: absolute;
     left: 10px;
     top: 15px;
-    transition: all .3s ease-in-out;
+    transition: all 0.3s ease-in-out;
     padding: 0 2px;
     z-index: 1;
     color: var(--color-black-1);
@@ -590,7 +617,7 @@ ul {
     outline: none;
     transition: all 0.3s;
     color: var(--color-black-1);
-    border-radius: .5rem;
+    border-radius: 0.5rem;
 }
 .input__label::before {
     content: "";
@@ -612,7 +639,7 @@ ul {
     top: -10px;
     color: var(--color-black-2);
     font-size: 14px;
-}  
+}
 .input__text::placeholder {
     font-size: 16px;
     opacity: 0;
@@ -622,19 +649,30 @@ ul {
     opacity: 1;
 }
 /* Grids areas */
-#name { grid-area: name; }
-#surname { grid-area: surname; }
-#email { grid-area: email; }
-#tel { grid-area: tel; }
-#message { grid-area: message; }
-#button__form { grid-area: button__form; }
-
+#name {
+    grid-area: name;
+}
+#surname {
+    grid-area: surname;
+}
+#email {
+    grid-area: email;
+}
+#tel {
+    grid-area: tel;
+}
+#message {
+    grid-area: message;
+}
+#button__form {
+    grid-area: button__form;
+}
 
 /*****      Blog      *****/
 .blog--grid {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-areas: 'main' 'aside';
+    grid-template-areas: "main" "aside";
 }
 /* Main Section from blog */
 .post {
@@ -664,12 +702,12 @@ ul {
     text-align: center;
     text-transform: uppercase;
     color: var(--color-white-1);
-    padding: .5rem;
+    padding: 0.5rem;
     font: normal 600 1.4rem var(--font-1);
 }
 .post__content {
     margin: 1rem 0;
-    height: 100%;    
+    height: 100%;
     display: flex;
     align-items: flex-start;
     justify-content: center;
@@ -691,8 +729,9 @@ ul {
     border-left: 5px solid var(--color-primary);
 }
 
-#main { grid-area: main; }
-
+#main {
+    grid-area: main;
+}
 
 /* Aside Section from Blog */
 .aside {
@@ -715,14 +754,14 @@ ul {
     align-items: center;
     cursor: pointer;
     margin-bottom: 1.5rem;
-    gap: .5rem;
+    gap: 0.5rem;
 }
 
 .entry__image {
     height: 50px;
     width: 50px;
     object-fit: cover;
-    border-radius: .5rem;
+    border-radius: 0.5rem;
 }
 .entry__content {
     display: flex;
@@ -752,11 +791,11 @@ ul {
     font-size: 1.4rem;
 }
 .pagination__item {
-    padding: .3rem;
+    padding: 0.3rem;
     color: #050505;
 }
 .pagination__item--active {
-    color: rgba(0, 0, 0, .4);
+    color: rgba(0, 0, 0, 0.4);
 }
 
 @media (min-width: 768px) {
@@ -764,17 +803,20 @@ ul {
         gap: 1rem;
         position: relative;
         grid-template-columns: repeat(3, 1fr);
-        grid-template-areas: 'main main aside';
+        grid-template-areas: "main main aside";
     }
     .post__date {
         min-width: 80px;
         padding: 1rem;
         font-size: 1.8rem;
     }
-    .post, .entry, .aside__category {
-        transition: .3s all ease-in-out;
+    .post,
+    .entry,
+    .aside__category {
+        transition: 0.3s all ease-in-out;
     }
-    .post:hover, .entry:hover {
+    .post:hover,
+    .entry:hover {
         transform: scale(102%);
     }
     .aside__category:hover {
@@ -788,4 +830,18 @@ ul {
         position: sticky;
         top: 90px;
     }
+}
+
+.card {
+    border-radius: 1rem;
+    overflow: hidden;
+    border: none;
+}
+.card-img-top {
+    height: 250px;
+    width: 100%;
+    object-fit: cover;
+}
+.card-body {
+    background-color: var(--color-white-2);
 }
